--- a/package.json
+++ b/package.json
@@ -30,7 +30,9 @@
   "dependencies": {
     "@11ty/eleventy-navigation": "^0.1.5",
     "clean-css": "^4.2.1",
+    "eleventy-plugin-seo": "^0.5.1",
     "html-minifier": "^4.0.0",
+    "netlify-cli": "^2.59.0",
     "uglify-es": "^3.3.9"
   }
 }
